--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
                 <span class="badge">36 Full Myths</span>
             </a>
             
+            <a href="adventure-game.html" class="project-card">
+                <div class="project-icon">🗡️⚡</div>
+                <div class="project-title">Hero's Quest Adventure</div>
+                <div class="project-desc">
+                    Be the hero in an epic Greek mythology adventure! Make choices that matter as you 
+                    climb Mount Olympus, journey to the Underworld, and face Typhon himself!
+                </div>
+                <span class="badge">Your Choices Matter</span>
+                <span class="badge">12+ Endings</span>
+            </a>
+            
             <a href="magic-database.html" class="project-card">
                 <div class="project-icon">🎩✨</div>
                 <div class="project-title">Magic Trick Database</div>
