Add Digital Sketchpad drawing app

--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
                 <span class="badge">12+ Endings</span>
             </a>
             
+            <a href="digital-sketchpad.html" class="project-card">
+                <div class="project-icon">🎨🖌️</div>
+                <div class="project-title">Digital Sketchpad</div>
+                <div class="project-desc">
+                    Draw and create art with tons of colors, brush sizes, and a magical rainbow mode! 
+                    Save your artwork as images. Unleash your creativity!
+                </div>
+                <span class="badge">Rainbow Mode 🌈</span>
+                <span class="badge">Save Drawings</span>
+            </a>
+            
             <a href="magic-database.html" class="project-card">
                 <div class="project-icon">🎩✨</div>
                 <div class="project-title">Magic Trick Database</div>
