Add countdown timer with multiple events, emojis, and confetti celebrations

--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
                 <span class="badge">Save Drawings</span>
             </a>
             
+            <a href="countdown-timer.html" class="project-card">
+                <div class="project-icon">⏰🎉</div>
+                <div class="project-title">Countdown Timer</div>
+                <div class="project-desc">
+                    Count down to your special events! Birthdays, holidays, trips - track them all! 
+                    Live updating timers with confetti celebrations when they finish!
+                </div>
+                <span class="badge">Multiple Countdowns</span>
+                <span class="badge">Confetti! 🎊</span>
+            </a>
+            
             <a href="magic-database.html" class="project-card">
                 <div class="project-icon">🎩✨</div>
                 <div class="project-title">Magic Trick Database</div>
