Add Character Forge project - character generator for writers

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
                 <span class="badge">Performance Logger</span>
             </a>
             
+            <a href="character-forge/index.html" class="project-card">
+                <div class="project-icon">🛡️⚔️</div>
+                <div class="project-title">Character Forge</div>
+                <div class="project-desc">
+                    Create unforgettable characters for your stories! Generate complete characters with names, 
+                    personalities, backstories, and secrets. Perfect for writers, game masters, and storytellers.
+                </div>
+                <span class="badge">Deep Personalities</span>
+                <span class="badge">Story-Ready</span>
+            </a>
+            
             <a href="color-game.html" class="project-card">
                 <div class="project-icon">🎨🎮</div>
                 <div class="project-title">Color Match Game</div>
