--- a/character-forge/generator.html
+++ b/character-forge/generator.html
@@ -18,6 +18,84 @@
             line-height: 1.6;
         }
 
+        /* Login Screen */
+        .login-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .login-box {
+            background: white;
+            padding: 3rem;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+        }
+
+        .login-box h2 {
+            font-size: 2rem;
+            color: #667eea;
+            margin-bottom: 1rem;
+        }
+
+        .login-box p {
+            color: #6b7280;
+            margin-bottom: 2rem;
+        }
+
+        .login-box input {
+            width: 100%;
+            padding: 1rem;
+            border: 2px solid #e5e7eb;
+            border-radius: 10px;
+            font-size: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .login-box input:focus {
+            outline: none;
+            border-color: #667eea;
+        }
+
+        .login-btn {
+            width: 100%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            padding: 1rem;
+            border-radius: 10px;
+            font-size: 1.1rem;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .login-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        .error-msg {
+            color: #ef4444;
+            font-size: 0.9rem;
+            margin-top: 0.5rem;
+            display: none;
+        }
+
+        .login-overlay.hidden {
+            display: none;
+        }
+
         /* Header */
         header {
             background: white;
@@ -360,6 +438,17 @@
     </style>
 </head>
 <body>
+    <!-- Login Screen -->
+    <div class="login-overlay" id="loginOverlay">
+        <div class="login-box">
+            <h2>🛡️ Character Forge</h2>
+            <p>Premium Access Required</p>
+            <input type="password" id="passwordInput" placeholder="Enter password" onkeypress="if(event.key==='Enter') login()">
+            <button class="login-btn" onclick="login()">Unlock</button>
+            <div class="error-msg" id="errorMsg">Incorrect password. Try again!</div>
+        </div>
+    </div>
+
     <header>
         <nav>
             <a href="index.html" class="logo">⚡ Character Forge</a>
@@ -455,6 +544,29 @@
     </div>
 
     <script>
+        // Password protection
+        const PASSWORD = 'roma2026';
+        
+        function login() {
+            const input = document.getElementById('passwordInput');
+            const error = document.getElementById('errorMsg');
+            const overlay = document.getElementById('loginOverlay');
+            
+            if (input.value === PASSWORD) {
+                overlay.classList.add('hidden');
+                sessionStorage.setItem('authenticated', 'true');
+            } else {
+                error.style.display = 'block';
+                input.value = '';
+                input.focus();
+            }
+        }
+
+        // Check if already authenticated
+        if (sessionStorage.getItem('authenticated') === 'true') {
+            document.getElementById('loginOverlay').classList.add('hidden');
+        }
+
         // Character generation data
         const names = {
             fantasy: {
