Update premium password to Characterforge2026

--- a/character-forge/generator.html
+++ b/character-forge/generator.html
@@ -581,8 +581,8 @@
     </div>
 
     <script>
-        // Password protection
-        const PASSWORD = 'roma2026';
+        // Password protection - Premium access password
+        const PASSWORD = 'Characterforge2026';
         
         function login() {
             const input = document.getElementById('passwordInput');
