Add Piano Music Practicer - full screen piano with record and playback

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
                 <span class="badge">Performance Logger</span>
             </a>
             
+            <a href="piano-practicer/index.html" class="project-card">
+                <div class="project-icon">🎹🎵</div>
+                <div class="project-title">Piano Music Practicer</div>
+                <div class="project-desc">
+                    A full-screen interactive piano you can play with your mouse or keyboard! 
+                    Record what you play and listen back instantly. Perfect for practicing music.
+                </div>
+                <span class="badge">Full Screen Piano</span>
+                <span class="badge">Record & Playback</span>
+            </a>
+
             <a href="character-forge/index.html" class="project-card">
                 <div class="project-icon">🛡️⚔️</div>
                 <div class="project-title">Character Forge</div>
