2 octaves - keys 1.5x wider, perfect size

--- a/piano-practicer/index.html
+++ b/piano-practicer/index.html
@@ -325,7 +325,7 @@
 
     // Which octaves to show
     const ALL_OCTAVES = [2, 3, 4, 5];
-    let visibleOctaves = [3, 4, 5];
+    let visibleOctaves = [3, 4];
 
     // ── Play / Release ─────────────────────────────────
     function playNote(note) {
