Add The Cryptex - Code & Cipher Encyclopedia with 15+ codes

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
                 <span class="badge">Performance Logger</span>
             </a>
             
+            <a href="cryptex/index.html" class="project-card">
+                <div class="project-icon">🔐🕵️</div>
+                <div class="project-title">The Cryptex</div>
+                <div class="project-desc">
+                    Your ultimate code and cipher encyclopedia! Learn about Caesar ciphers, Morse code, 
+                    Pigpen, Binary, and tons more. Includes tips on how to crack each one!
+                </div>
+                <span class="badge">15+ Codes</span>
+                <span class="badge">Decoding Tips</span>
+            </a>
+
             <a href="piano-practicer/index.html" class="project-card">
                 <div class="project-icon">🎹🎵</div>
                 <div class="project-title">Piano Music Practicer</div>
