--- a/cryptex/index.html
+++ b/cryptex/index.html
@@ -424,23 +424,24 @@
             <div class="card-body">
                 <p class="category">Substitution Cipher</p>
                 <h4>How It Works</h4>
-                <p>Shift each letter in the alphabet by a set number. Named after Julius Caesar who used it to send secret military messages!</p>
+                <p>Shift each letter in the alphabet by ANY number (1-25). Named after Julius Caesar who used +3, but you can use +1, +5, +13, or any shift!</p>
                 
                 <div class="example">
-                    <div class="example-label">Shift by 3:</div>
-                    <div class="example-text">HELLO → KHOOR</div>
+                    <div class="example-label">Shift +1: HELLO → IFMMP | Shift +3: HELLO → KHOOR</div>
+                    <div class="example-text">A+1=B, A+3=D, A+13=N</div>
                 </div>
 
                 <h4>The Key</h4>
-                <p>A=D, B=E, C=F... (each letter becomes the one 3 places forward)</p>
+                <p>Pick your shift number! +1: A=B, B=C, C=D... | +3: A=D, B=E, C=F... | Any shift 1-25 works!</p>
 
                 <div class="tips">
                     <h5>💡 How to Crack It:</h5>
                     <ul>
-                        <li>Try all 25 possible shifts</li>
+                        <li>Try all 25 possible shifts (brute force!)</li>
                         <li>Look for common words like "THE" or "AND"</li>
                         <li>Most common letter in English is E</li>
                         <li>Count letter frequency to find the shift</li>
+                        <li>Common shifts: +1, +3 (classic), +13 (ROT13)</li>
                     </ul>
                 </div>
             </div>
