Add Cheat Sheet Builder - pick favorites and print!

--- a/cryptex/index.html
+++ b/cryptex/index.html
@@ -185,6 +185,7 @@
     <div class="intro">
         <h2>🕵️ Learn to Crack Codes!</h2>
         <p>Each code has a picture showing how it works. Super simple!</p>
+        <a href="cheatsheet.html" style="display: inline-block; margin-top: 1rem; padding: 0.8rem 1.5rem; background: linear-gradient(135deg, #e94560, #c73659); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">🖨️ Build Your Cheat Sheet!</a>
     </div>
 
     <!-- CAESAR CIPHER -->
