--- a/cryptex/index.html
+++ b/cryptex/index.html
@@ -185,7 +185,13 @@
     <div class="intro">
         <h2>🕵️ Learn to Crack Codes!</h2>
         <p>Each code has a picture showing how it works. Super simple!</p>
-        <a href="cheatsheet.html" style="display: inline-block; margin-top: 1rem; padding: 0.8rem 1.5rem; background: linear-gradient(135deg, #e94560, #c73659); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">🖨️ Build Your Cheat Sheet!</a>
+        <div style="display: flex; flex-wrap: wrap; gap: 0.8rem; justify-content: center; margin-top: 1rem;">
+            <a href="cheatsheet.html" style="padding: 0.8rem 1.2rem; background: linear-gradient(135deg, #e94560, #c73659); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">🖨️ Cheat Sheet</a>
+            <a href="memorize.html" style="padding: 0.8rem 1.2rem; background: linear-gradient(135deg, #10b981, #059669); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">🧠 Memorize</a>
+            <a href="qr.html" style="padding: 0.8rem 1.2rem; background: linear-gradient(135deg, #8b5cf6, #7c3aed); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">📱 QR Cipher</a>
+            <a href="timeline.html" style="padding: 0.8rem 1.2rem; background: linear-gradient(135deg, #f59e0b, #d97706); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">⏰ Timeline</a>
+            <a href="map.html" style="padding: 0.8rem 1.2rem; background: linear-gradient(135deg, #3b82f6, #2563eb); color: white; text-decoration: none; border-radius: 10px; font-weight: 700;">🗺️ World Map</a>
+        </div>
     </div>
 
     <!-- CAESAR CIPHER -->
